fix(notice): added 16px padding-left for button spacing (#1440)

--- a/src/less/page-notice/base/page-notice.less
+++ b/src/less/page-notice/base/page-notice.less
@@ -111,7 +111,7 @@ span[role="region"].page-notice {
 
     .page-notice__footer {
         margin-top: 0;
-        padding-left: 0;
+        padding-left: 16px;
         width: auto;
     }
 }
